src/objects/Skill_Requirements_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Chat_Queue_Size_Per_Agent__c</fullName>
        <label>Chat Queue Size Per Agent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Churn_Skill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Churn Skill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Skill Requirements Setting</label>
    <pluralLabel>Skill Requirements Settings</pluralLabel>
</CustomObject>